tests/ui/const-generics/defaults/generic-expr-default.stderr
error: unconstrained generic constant
  --> $DIR/generic-expr-default.rs:5:54
   |
LL | pub fn needs_evaluatable_bound<const N1: usize>() -> Foo<N1> {
   |                                                      ^^^^^^^
   |
help: try adding a `where` bound
   |
LL | pub fn needs_evaluatable_bound<const N1: usize>() -> Foo<N1> where [(); { N + 1 }]: {
   |                                                              ++++++++++++++++++++++

error: unconstrained generic constant
  --> $DIR/generic-expr-default.rs:14:58
   |
LL | fn needs_evaluatable_bound_alias<T, const N: usize>() -> FooAlias<N>
   |                                                          ^^^^^^^^^^^
   |
help: try adding a `where` bound
   |
LL | fn needs_evaluatable_bound_alias<T, const N: usize>() -> FooAlias<N> where [(); { N + 1 }]:
   |                                                                      ++++++++++++++++++++++

error: aborting due to 2 previous errors

